--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
   push:
     paths:
-      - "engine/prisma/**"
+    - 'prisma/**'
   workflow_dispatch:
 
 jobs:
@@ -18,26 +18,16 @@ jobs:
           MYSQL_DATABASE: lostcity
         ports:
           - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping -h 127.0.0.1 -u root -ppassword"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
-    defaults:
-      run:
-        working-directory: engine
+        options: --health-cmd="mysqladmin ping -h localhost -uroot -ppassword" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "npm"
-          cache-dependency-path: "engine/package-lock.json"
+          node-version: 22
 
       - name: Install dependencies
         run: npm i
