--- a/.github/workflows/pr-convention.yml
+++ b/.github/workflows/pr-convention.yml
@@ -2,12 +2,15 @@ name: PR title should be in conventional commit format
 
 on:
   pull_request_target:
-    types: [opened, edited, synchronize]
+    types:
+    - opened
+    - edited
+    - synchronize
 
 jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - uses: amannn/action-semantic-pull-request@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - uses: amannn/action-semantic-pull-request@v5
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
