--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          submodules: false
 
       - name: Install Node.js
         uses: actions/setup-node@v4
