--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -3,8 +3,10 @@ name: Test migrations
 on:
   pull_request:
   push:
+    branches: ["Another-Clean-Base-To-Experiment-On"]
     paths:
-    - 'prisma/**'
+      - "engine/prisma/**"
+      - ".github/workflows/migrations.yml"
   workflow_dispatch:
 
 jobs:
@@ -18,18 +20,28 @@ jobs:
           MYSQL_DATABASE: lostcity
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping -h localhost -uroot -ppassword" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: >-
+          --health-cmd="mysqladmin ping -h 127.0.0.1 -u root -ppassword"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+    defaults:
+      run:
+        working-directory: engine
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: false
 
-      - name: Install Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: "engine/package-lock.json"
 
       - name: Install dependencies
         run: npm i
