--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     services:
       mysql:
         image: mysql:8
@@ -20,11 +21,12 @@ jobs:
           MYSQL_DATABASE: lostcity
         ports:
           - 3306:3306
+        # Ensure MySQL is ready before running Prisma commands
         options: >-
-          --health-cmd="mysqladmin ping -h 127.0.0.1 -u root -ppassword"
+          --health-cmd="mysqladmin ping -h 127.0.0.1 -u root -ppassword || exit 1"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=5
+          --health-retries=10
 
     defaults:
       run:
@@ -39,21 +41,28 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version: "20"
           cache: "npm"
           cache-dependency-path: "engine/package-lock.json"
 
       - name: Install dependencies
-        run: npm i
+        run: npm ci || npm i
 
-      - name: Run Singleworld Migrations
-        run: |
-          set -e
-          npx prisma migrate reset --schema prisma/singleworld/schema.prisma --force
+      - name: Generate Prisma Client
+        run: npx prisma generate
 
-      - name: Run Multiworld Migrations
+      # For CI verification a destructive reset is OK on ephemeral DBs.
+      # If you later switch to shared/staging/prod DBs, replace with `prisma migrate deploy`.
+      - name: Run Singleworld Migrations (reset DB)
         env:
           DATABASE_URL: "mysql://root:password@localhost:3306/lostcity"
         run: |
           set -e
-          npx prisma migrate reset --schema prisma/multiworld/schema.prisma --force
+          npx prisma migrate reset --schema prisma/singleworld/schema.prisma --force --skip-seed
+
+      - name: Run Multiworld Migrations (reset DB)
+        env:
+          DATABASE_URL: "mysql://root:password@localhost:3306/lostcity"
+        run: |
+          set -e
+          npx prisma migrate reset --schema prisma/multiworld/schema.prisma --force --skip-seed
