--- a/engine/.github/workflows/engine.yml
+++ b/engine/.github/workflows/engine.yml
@@ -1,30 +1,48 @@
-﻿name: Verify Engine Code
+name: Verify Engine Code
 
 on:
   pull_request:
   push:
     paths:
-    - '.github/workflows/engine.yml'
-    - 'src/**'
-    - 'tools/**'
+      - 'engine/.github/workflows/engine.yml'
+      - 'engine/src/**'
+      - 'engine/tools/**'
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: engine
 
 jobs:
   verify:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: false
 
-    - uses: oven-sh/setup-bun@v2
-      with:
-        bun-version: latest
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.x'
 
-    - run: bun install
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
 
-    - name: Lint
-      run: bun run lint
+      - name: Install dependencies
+        run: bun install
 
-    - name: Compile
-      run: bun run tsc
+      - name: Lint
+        run: |
+          if [ "$(npm pkg get scripts.lint 2>/dev/null)" != "undefined" ]; then
+            bun run lint
+          else
+            echo "no lint script"
+          fi
+
+      - name: Compile
+        run: bun run tsc
